plugins {
    id 'org.springframework.boot' version '2.6.5'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
    id 'groovy'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenLocal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.75.Final:osx-aarch_64'

    implementation 'javax.validation:validation-api'
    implementation 'org.hibernate.validator:hibernate-validator'

    implementation 'org.springframework.kafka:spring-kafka:2.8.4'

    implementation 'no.fintlabs:fint-kafka:2.3.0'

    implementation 'no.fintlabs:fint-flyt-resource-server:0.0.1'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.0'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
    testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'

    //testImplementation 'org.springframework.kafka:spring-kafka-test'
    //testImplementation 'org.springframework.security:spring-security-test'
}

test {
    useJUnitPlatform()
}

jar {
    enabled = true
    archiveVersion = ""
    archiveClassifier = ""
}
